--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>WP</title>
   </head>
   <body>
     <div class="container-principal">
@@ -38,7 +41,12 @@
       </header>
       <main>
         <div class="first-container">
-          <img src="" alt="">
+          <div class="overlay-brown"></div>
+          <img src="img/banner.jpg" alt="">
+          <div class="text">
+            <h2>Pretium ac placerat dui inerdum nunc in eros urna morbi</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium temporibus obcaecati fuga, viverra soluta...</p>
+          </div>
         </div>
         <div class="second-container">
           <div class="title-content"></div>
