Creation Container Sx

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div class="container-principal">
+        <!-- Start logo e menù -->
       <header>
         <div class="logo">
           <img src="img/logo.png" alt="Logo Neori">
@@ -40,18 +41,32 @@
         </nav>
       </header>
       <main>
+         <!-- Start Banner -->
         <div class="first-container">
           <div class="overlay-brown"></div>
-          <img src="img/banner.jpg" alt="">
+          <img src="img/banner.jpg" alt="Banner Yoga">
           <div class="text">
             <h2>Pretium ac placerat dui inerdum nunc in eros urna morbi</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium temporibus obcaecati fuga, viverra soluta...</p>
           </div>
         </div>
         <div class="second-container">
-          <div class="title-content"></div>
-          <div class="container">
-            <div class="sx content"></div>
+          <div class="title-content">
+            <h1>Leadership</h1>
+            <span>Fertenum urna a libero tempus</span>
+          </div>
+          <div class="box-sx">
+            <div class="image-sx">
+              <div class="overlay-gray"></div>
+              <div class="small-image">
+              <img src="img/img-1.jpg" alt="Woman think the succes">
+              </div>
+            </div>
+            <div class="text-content">
+                <h3>Lorem</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
+            </div>
+            </div>
             <div class="center content"></div>
             <div class="dx content"></div>
           </div>
