Start Creation Center Content

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>WP</title>
   </head>
   <body>
@@ -59,7 +59,7 @@
             <div class="image-sx">
               <div class="overlay-gray"></div>
               <div class="small-image">
-              <img src="img/img-1.jpg" alt="Woman think the succes">
+                <img src="img/img-1.jpg" alt="Image Woman think the succes">
               </div>
             </div>
             <div class="text-content">
@@ -67,13 +67,23 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
             </div>
             </div>
-            <div class="center content"></div>
-            <div class="dx content"></div>
           </div>
+          <div class="box-center">
+            <div class="image-center">
+              <div class="overlay-gray-middle"></div>
+              <div class="medium-image">
+                <img src="img/banner-2.jpg" alt="Banner Work">  
+              </div>
+              <!-- <div class="text-content">
+                <h3>Lorem</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
+              </div> -->
+            </div>
+          </div>
+          <div class="dx content"></div>
         </div>
       </main>
       <footer>
-        
       </footer>
     </div>
   </body>
