Creation Center and Dx Content

--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium temporibus obcaecati fuga, viverra soluta...</p>
           </div>
         </div>
+        <!-- Start Second Container -->
         <div class="second-container">
           <div class="title-content">
             <h1>Leadership</h1>
             <span>Fertenum urna a libero tempus</span>
           </div>
+          <!-- Star Box Sx -->
           <div class="box-sx">
             <div class="image-sx">
               <div class="overlay-gray"></div>
@@ -66,21 +68,32 @@
                 <h3>Lorem</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
             </div>
-            </div>
           </div>
+          <!-- Start Box Center -->
           <div class="box-center">
             <div class="image-center">
               <div class="overlay-gray-middle"></div>
               <div class="medium-image">
                 <img src="img/banner-2.jpg" alt="Banner Work">  
               </div>
-              <!-- <div class="text-content">
-                <h3>Lorem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
-              </div> -->
+              <div class="text-content">
+                <h3>Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
+              </div>
             </div>
           </div>
-          <div class="dx content"></div>
+          <div class="box-dx">
+            <div class="image-dx">
+              <div class="overlay-gray"></div>
+              <div class="small-image">
+                <img src="img/img-3.jpg" alt="Image idea">
+              </div>
+            </div>
+            <div class="text-content">
+                <h3>Lorem</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
+            </div>
+          </div>
         </div>
       </main>
       <footer>
