--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
           </div>
           <!-- Star Box Sx -->
           <div class="box-sx">
-            <div class="image-sx">
-              <div class="overlay-gray"></div>
+              
               <div class="small-image">
+                <div class="overlay-gray"></div>
                 <img src="img/img-1.jpg" alt="Image Woman think the succes">
               </div>
-            </div>
             <div class="text-content">
                 <h3>Lorem</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
@@ -71,32 +70,30 @@
           </div>
           <!-- Start Box Center -->
           <div class="box-center">
-            <div class="image-center">
+            <div class="medium-image">
               <div class="overlay-gray-middle"></div>
-              <div class="medium-image">
-                <img src="img/banner-2.jpg" alt="Banner Work">  
-              </div>
-              <div class="text-content">
-                <h3>Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
-              </div>
+              <img src="img/banner-2.jpg" alt="Banner Work">  
+            </div>
+            <div class="text-content">
+              <h3>Ipsum</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
             </div>
           </div>
           <div class="box-dx">
-            <div class="image-dx">
-              <div class="overlay-gray"></div>
+              
               <div class="small-image">
+                <div class="overlay-gray"></div>
                 <img src="img/img-3.jpg" alt="Image idea">
               </div>
-            </div>
             <div class="text-content">
                 <h3>Lorem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus natus consectetur illo, ipsam laudantium reiciendis aspernatur tempore harum velit modi provident doloremque delectus repudiandae enim nihil earum odio, dolores deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
           </div>
         </div>
       </main>
       <footer>
+        <span>Designed with </span>
       </footer>
     </div>
   </body>
